fixed flex alignment in header nav

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -38,7 +38,7 @@ header {
 
 header nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
